# MyWorkSpace

./: .gitignore  README.md  pyproject.toml
apps/a01/: main.py  pyproject.toml
apps/a01/config/: config.py
doc/: UV專案管理.md  專案原始碼管理.md
